# identity-credential

./: .gitignore  CHANGELOG.md  CODE-OF-CONDUCT.md  CODING-STYLE.md  CONTRIBUTING.md  DEVELOPER-ENVIRONMENT.md  MAINTAINERS.md  Package.swift  Podfile  README.md  TESTING.md  add_new_version.py  build.gradle  build.gradle.kts  gradle.properties  gradlew.bat  index.html  publish-helper.gradle  settings.gradle  settings.gradle.kts  versions.html
.config/: install-project-git-hooks  ktlint-editorconfig  ktlint.gradle
.scripts/: install-precommit-git-hook  pre-commit.ktlint
Identity Credential.xcworkspace/: contents.xcworkspacedata
JCardSim/: build.gradle.kts
Multipaz.xcworkspace/: contents.xcworkspacedata
app/: build.gradle
appholder/: build.gradle  build.gradle.kts  lint.xml
appreader/: build.gradle
appverifier/: build.gradle  build.gradle.kts  lint.xml
bleofflinetransfer/: build.gradle
cbor-processor/: README.md  build.gradle
cbordata/: build.gradle
cloudsa-server/: build.gradle
docs/: .gitignore
gradle/: libs.versions.toml
identity/: build.gradle  build.gradle.kts
identity-android/: build.gradle  build.gradle.kts
identity-android-cloudsa/: build.gradle
identity-android-csa/: build.gradle.kts  lint.xml
identity-android-legacy/: build.gradle  build.gradle.kts
identity-appsupport/: build.gradle.kts
identity-cloudsa/: build.gradle
identity-csa/: build.gradle.kts
identity-doctypes/: build.gradle  build.gradle.kts
identity-flow/: build.gradle  build.gradle.kts
identity-issuance/: build.gradle  build.gradle.kts
identity-issuance-api/: build.gradle.kts
identity-mdoc/: build.gradle  build.gradle.kts
identity-sdjwt/: build.gradle  build.gradle.kts
identitycredential/: build.gradle
identityctl/: build.gradle  build.gradle.kts
issuerauthority/: build.gradle
jpeg2k/: build.gradle  build.gradle.kts
mdl-ref-server/: Dockerfile  README.md  database.py  docker-compose.yml  mdl-ref-server.py  requirements.txt  server.py  test.py  util.py
mdlAapplet/: build.gradle.kts
mrtd-reader/: build.gradle  build.gradle.kts
mrtd-reader-android/: build.gradle  build.gradle.kts
multipaz-android-legacy/: .gitignore  build.gradle.kts
multipaz-backend-server/: build.gradle.kts
multipaz-barcodes/: build.gradle.kts  multipaz_barcodes.podspec
multipaz-cbor-rpc/: README.md  RPC.md  build.gradle.kts
multipaz-cbor-rpc-annotations/: build.gradle.kts
multipaz-compose/: build.gradle.kts  lint-baseline.xml  (+1 more)
multipaz-models/matcherTest/: CMakeLists.txt  DcqlQueryTest.cpp  MatcherTest.cpp  build.gradle.kts
multipaz-models/src/androidInstrumentedTest/cpp/: CMakeLists.txt  MatcherTest.cpp
(+5475 files in other folders)
